Home url and home page

--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -98,7 +98,7 @@
             margin-top: -25px;
         }
         .google-login:hover {
-            transform: scale(1.1); /* Увеличение размера при наведении */
+            transform: scale(1.1);
         }
 
         a {
@@ -108,11 +108,12 @@
         }
 
         a:hover {
-            text-decoration: underline; /* Подчеркивание при наведении */
+            text-decoration: underline;
         }
         .error {
             color:#979797;
-            margin-top: 1px; /* Уменьшаем верхний отступ */
+            margin-top: 1px;
+            font-family: "Gantari", sans-serif;
         }
         .link{
             margin-bottom:3px ;
